package hpgc;

enum MessageType{
    REGISTER_WORKER = 1;

    WORKER_RUN_TASK = 2;
    WORKER_TASK_DONE = 3;

    WORKER_FINALIZE = 4;
    WORKER_FINALIZE_DONE = 5;
}

enum TaskType{
    TASK_OK = 1;
    TASK_WRONG= 2;
}

message EmptyMessage{
}

message RegisterWorkerRequest{
    required int32 id = 1;
}

message TaskMessage{
    required TaskType Type = 1;
    required int32 DataIndex = 2;
    required string StartTime = 3;
    required string EndTime = 4;
}

message DataMessage{
    required int32 DataIndex = 1;
    required string SrcDataSource = 2;
    required string SrcLayer = 3;
    required string DstDataSource = 4;
    required string DstLayer = 5;
    repeated int32 features = 6;
}